syntax = "proto3";

package account;

message AccountDto {
    string firstName = 1;
    string lastName = 2;
}

message Account {
    int32 id = 1;
    int32 authId = 2;
    string firstName = 3;
    string lastName = 4;
}

message AccountByAuth {}

service AccountService {
    rpc createAccount (AccountDto) returns (Account) {}
    rpc editAccount (AccountDto) returns (Account) {}
    rpc accountByAuth (AccountByAuth) returns (Account) {}
}